@@ -1,3 +1,8 @@
+2008-05-10  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* libavogadro/src/tools/aligntool.cpp: Fixed for case where the
+	molecule was already alined to the chosen axis.
+
 2008-05-09  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* CMakeLists.txt: Install our fragments. Destination may need
